# cpp-calorie-tracker

./: .gitignore  CMakeLists.txt
include/: basic_food.h  calorie_tracker.h  data_manager.h  exceptions.h  food_item.h  meal.h  recipe.h  statistics.h  user_profile.h
src/: basic_food.cpp  calorie_tracker.cpp  data_manager.cpp  food_item.cpp  main.cpp  meal.cpp  recipe.cpp  statistics.cpp  user_profile.cpp
tests/: test_basic_food.cpp  test_calorie_tracker.cpp  test_data_manager.cpp  test_meal.cpp  test_recipe.cpp  test_statistics.cpp  test_user_profile.cpp
